--- a/helmchart/values.yaml
+++ b/helmchart/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 4
 
 image:
-  repository: chgoutam/mycounterapp
+  repository: chgoutam/mynodejs
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: 1.16.1
